--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 
 .idea/vcs.xml
 .idea/workspace.xml
+.idea/workspace.xml
+.idea/workspace.xml___jb_tmp___
+.idea/workspace.xml
+Jiutianju/Runtime/Temp/*.php
+Jiutianju/Runtime/Logs/*.log
+Jiutianju/Runtime/Cache/*
